<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2"
        android:layout_marginTop="70dp">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:id="@+id/relativeLayout3"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/securityhint_edt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/getpassword_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/background_round_corner_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/getpassword"
            android:textColor="#fff" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_round_corner_button"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/cancel"
            android:textColor="#fff" />
    </RelativeLayout>
    <TextView
        android:id="@+id/textViewusername"
        android:layout_width="fill_parent"
        android:layout_height="50dp"

        android:text="@string/entersecurityhint"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"
        android:background="#c50d0e"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff" />

    <EditText
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:id="@+id/securityhint_edt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_round_corner_edittext"
        android:ems="10"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/relativeLayout2"
        android:layout_toEndOf="@+id/relativeLayout2">
    </EditText>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout3"
        android:layout_centerHorizontal="true">

     <!--   <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entersecurityhint" />-->

        <!--    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/securityhint_edt"
            android:layout_marginTop="15dp"
            android:text="@string/yourpassword" />-->

    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Your password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="15dp"
        android:textColor="#88071E12"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
