<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity"
    android:weightSum="4.0">
    <RelativeLayout
        android:id="@+id/reluser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="140dp"
        android:layout_weight="1.0"></RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_weight="1.0"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout"
        android:layout_below="@+id/reluser">
    </RelativeLayout>

        <!--   <TextView
               android:id="@+id/textView1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/password"
               android:layout_alignParentTop="true"
               android:layout_alignParentLeft="true"
               android:layout_alignParentStart="true" /> -->


    <LinearLayout
        android:id="@+id/rel2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel1"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_weight="1.0">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"></LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/relativeLayout"
        android:layout_weight="1.0">

    </RelativeLayout>
    <TextView
         android:id="@+id/textViewusername"
         android:layout_width="fill_parent"
         android:layout_height="50dp"
         android:text="Login"
         android:textStyle="bold"
         android:textSize="20dp"
        android:gravity="center"
         android:background="#c50d0e"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textSize="14dp"
        android:gravity="center"
        android:text="@string/forgetpassword"
        android:enabled="true"
        android:layout_below="@+id/register_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <!--<ImageView-->
        <!--android:src="@drawable/logoimage"-->
        <!--android:layout_width="80dp"-->
        <!--android:layout_height="72dp"-->
        <!--android:layout_marginTop="30dp"-->
        <!--android:layout_below="@+id/textViewusername"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:id="@+id/imageView" />-->
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/register"
        android:background="#fff"
        android:allowUndo="false"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:singleLine="true"
        android:capitalize="none"
        android:textSize="14dp"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_round_corner_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/Login"
        android:enabled="true"
        android:textColor="#fff"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password_edt"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/username_edt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_round_corner_edittext"
        android:ems="10"
        android:inputType="text"
        android:padding="5dp"
        android:textStyle="bold"
        android:hint="Enter Email"
        android:textSize="16dp"
        android:gravity="center"
        android:textColor="#88071e12"
        android:layout_alignTop="@+id/reluser"
        android:layout_alignLeft="@+id/reluser"
        android:layout_alignStart="@+id/reluser"
        android:layout_alignRight="@+id/reluser"
        android:layout_alignEnd="@+id/reluser">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/background_round_corner_edittext"
        android:ems="10"
        android:textSize="16dp"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textStyle="bold"
        android:hint="Enter Password"
        android:enabled="true"
        android:gravity="center"
        android:textColor="#88071E12"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_alignLeft="@+id/relativeLayout"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_alignRight="@+id/relativeLayout"
        android:layout_alignEnd="@+id/relativeLayout">

    </EditText>

</RelativeLayout>